// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover anchorPosition defaults to center 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button />
</div>
`;

exports[`EuiPopover anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight"
>
  <button />
</div>
`;

exports[`EuiPopover anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter"
>
  <button />
</div>
`;

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button />
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button />
</div>
`;

exports[`EuiPopover isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button />
</div>
`;

exports[`EuiPopover isOpen renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button />
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
    />
  </div>
</div>
`;
